# trendscope

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
deploy/: nginx.conf
deploy/ansible/: inventory.example.ini  playbook.yml
deploy/ansible/templates/: trendscope.service.j2  trendscope.timer.j2
src/trendscope/: __init__.py  cli.py  config.py  models.py  pipeline.py  render.py
src/trendscope/collectors/: __init__.py  ai_news.py  base.py  ecommerce_news.py  github_ai.py  github_general.py
src/trendscope/templates/: base.html  index.html  topic.html
tests/: test_cli.py  test_collectors_ai_news.py  test_collectors_base.py  test_collectors_ecommerce_news.py  test_collectors_github_ai.py  test_collectors_github_general.py  test_models.py  test_pipeline.py  test_render.py
